<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideOverlay"
    android:padding="@dimen/padding_big">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/features"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <TextView
            android:text="@string/facebook_connect"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:layout_marginTop="@dimen/padding_small"
            android:id="@+id/facebook_connect"
            android:layout_width="match_parent"
            android:text="@string/login"
            android:layout_height="48dp"/>

        <LinearLayout
            android:id="@+id/session_container"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/facebook_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/padding_big"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/wall_features"/>

            <Button
                android:layout_marginTop="@dimen/padding_small"
                android:id="@+id/facebook_wall_image_upload"
                android:layout_width="match_parent"
                android:text="@string/upload_image_wall"
                android:layout_height="48dp"/>

            <EditText
                android:layout_marginTop="@dimen/padding_middle"
                android:id="@+id/facebook_wall_status_edit"
                android:layout_width="match_parent"
                android:hint="Status text here"
                android:layout_height="48dp"/>

            <Button
                android:id="@+id/facebook_wall_status_upload"
                android:layout_width="match_parent"
                android:text="@string/upload_status_wall"
                android:layout_height="48dp"/>

            <TextView
                android:layout_marginTop="@dimen/padding_big"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/page_features"/>

            <Button
                android:layout_marginTop="@dimen/padding_small"
                android:id="@+id/facebook_page_image_share"
                android:layout_width="match_parent"
                android:text="@string/upload_image_page"
                android:layout_height="48dp"/>

            <Button
                android:layout_marginTop="@dimen/padding_middle"
                android:id="@+id/facebook_page_url_image_share"
                android:layout_width="match_parent"
                android:text="@string/upload_url_image_page"
                android:layout_height="48dp"/>

            <EditText
                android:layout_marginTop="@dimen/padding_middle"
                android:id="@+id/facebook_page_status_edit"
                android:layout_width="match_parent"
                android:hint="Status text here"
                android:layout_height="48dp"/>

            <Button
                android:id="@+id/facebook_page_status_share"
                android:layout_width="match_parent"
                android:text="@string/upload_status_page"
                android:layout_height="48dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>